--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,12 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+hr{
+    margin: 1rem 0rem;
+}
 /** container **/
 .container {
-    padding : 0rem, 1rem;
+    padding : 0rem 1rem;
 }
 
 .container-center{
@@ -21,7 +24,7 @@ body {
 
 .link {
     text-decoration: none;
-    padding: 0.5rem, 1rem;
+    padding: 0.5rem 1rem;
 }
 
 .link-primary{
@@ -33,4 +36,15 @@ body {
     color: var(--primary-color);
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color);
+}
+
+/** lists **/
+
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-item-inline{
+    display: inline;
+    padding: 0rem 0.5rem;
 }
