--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ hr{
 /** links **/
 
 .link {
+    box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
@@ -125,6 +126,11 @@ hr{
 
 .footer .link{
     color: white;
+}
+
+.footer .footer-header{
+    font-weight: bold;
+    font-size: large;
 }
 
 .footer ul{
